@@ -1,0 +1,9 @@
+package me.admin.retrieverpvp.utils;
+
+import org.bukkit.ChatColor;
+
+public class MessageSpawnSet {
+	
+	public static String spawnSet = ChatColor.GREEN + "Spawn Point set for arena ";
+
+}
